@@ -5,6 +5,7 @@
 
 package meteordevelopment.meteorclient.renderer;
 
+import com.google.common.collect.ImmutableList;
 import com.mojang.blaze3d.platform.GlStateManager;
 import meteordevelopment.meteorclient.mixin.BufferRendererAccessor;
 import meteordevelopment.meteorclient.mixininterface.ICapabilityTracker;
@@ -17,7 +18,6 @@ import org.lwjgl.BufferUtils;
 import java.lang.reflect.Field;
 import java.nio.ByteBuffer;
 import java.nio.FloatBuffer;
-import java.util.List;
 
 import static meteordevelopment.meteorclient.MeteorClient.mc;
 import static org.lwjgl.opengl.GL32C.*;
@@ -36,9 +36,6 @@ public class GL {
 
     public static int CURRENT_IBO;
     private static int prevIbo;
-
-    private GL() {
-    }
 
     @PreInit
     public static void init() {
@@ -136,7 +133,7 @@ public class GL {
     }
 
     public static void shaderSource(int shader, String source) {
-        GlStateManager.glShaderSource(shader, List.of(source));
+        GlStateManager.glShaderSource(shader, ImmutableList.of(source));
     }
 
     public static String compileShader(int shader) {
@@ -341,7 +338,8 @@ public class GL {
             capStateField.setAccessible(true);
             return (ICapabilityTracker) capStateField.get(state);
         } catch (NoSuchFieldException | IllegalAccessException e) {
-            throw new IllegalStateException("Could not find GL state tracker '" + fieldName + "'", e);
+            e.printStackTrace();
+            return null;
         }
     }
 }
