@@ -96,10 +96,8 @@ public class SpawnProofer extends Module {
         // Find spawn locations
         for (BlockPos.Mutable blockPos : spawns) spawnPool.free(blockPos);
         spawns.clear();
-
-        int lightLevel = newMobSpawnLightLevel.get() ? 0 : 7;
         BlockIterator.register(range.get(), range.get(), (blockPos, blockState) -> {
-            BlockUtils.MobSpawn spawn = BlockUtils.isValidMobSpawn(blockPos, blockState, lightLevel);
+            BlockUtils.MobSpawn spawn = BlockUtils.isValidMobSpawn(blockPos, newMobSpawnLightLevel.get());
 
             if ((spawn == BlockUtils.MobSpawn.Always && (mode.get() == Mode.Always || mode.get() == Mode.Both)) ||
                     spawn == BlockUtils.MobSpawn.Potential && (mode.get() == Mode.Potential || mode.get() == Mode.Both)) {
@@ -137,7 +135,7 @@ public class SpawnProofer extends Module {
 
                 // Find lowest light level
                 int lowestLightLevel = 16;
-                BlockPos.Mutable selectedBlockPos = spawns.getFirst();
+                BlockPos.Mutable selectedBlockPos = spawns.get(0);
 
                 for (BlockPos blockPos : spawns) {
                     int lightLevel = mc.world.getLightLevel(blockPos);
@@ -150,7 +148,7 @@ public class SpawnProofer extends Module {
                 BlockUtils.place(selectedBlockPos, block, rotate.get(), -50, false);
             }
             else {
-                BlockUtils.place(spawns.getFirst(), block, rotate.get(), -50, false);
+                BlockUtils.place(spawns.get(0), block, rotate.get(), -50, false);
             }
         }
 
@@ -167,10 +165,7 @@ public class SpawnProofer extends Module {
             block instanceof AbstractPressurePlateBlock ||
             block instanceof TransparentBlock ||
             block instanceof TripwireBlock ||
-            block instanceof CarpetBlock ||
-            block instanceof LeverBlock ||
-            block instanceof AbstractRedstoneGateBlock ||
-            block instanceof AbstractRailBlock;
+            block instanceof CarpetBlock;
     }
 
     private boolean isLightSource(Block block) {
