@@ -5,6 +5,7 @@
 
 package meteordevelopment.meteorclient.systems.modules.world;
 
+import com.google.common.collect.Sets;
 import meteordevelopment.meteorclient.events.entity.player.StartBreakingBlockEvent;
 import meteordevelopment.meteorclient.events.render.Render3DEvent;
 import meteordevelopment.meteorclient.events.world.TickEvent;
@@ -36,7 +37,7 @@ public class VeinMiner extends Module {
     private final SettingGroup sgGeneral = settings.getDefaultGroup();
     private final SettingGroup sgRender = settings.createGroup("渲染");
 
-    private final Set<Vec3i> blockNeighbours = Set.of(
+    private final Set<Vec3i> blockNeighbours = Sets.newHashSet(
         new Vec3i(1, -1, 1), new Vec3i(0, -1, 1), new Vec3i(-1, -1, 1),
         new Vec3i(1, -1, 0), new Vec3i(0, -1, 0), new Vec3i(-1, -1, 0),
         new Vec3i(1, -1, -1), new Vec3i(0, -1, -1), new Vec3i(-1, -1, -1),
@@ -55,14 +56,14 @@ public class VeinMiner extends Module {
     private final Setting<List<Block>> selectedBlocks = sgGeneral.add(new BlockListSetting.Builder()
         .name("方块")
         .description("要选择的方块。")
-        .defaultValue(Blocks.STONE, Blocks.DIRT, Blocks.GRASS_BLOCK)
+        .defaultValue(Blocks.STONE, Blocks.DIRT, Blocks.GRASS)
         .build()
     );
 
     private final Setting<ListMode> mode = sgGeneral.add(new EnumSetting.Builder<ListMode>()
         .name("模式")
         .description("选择模式。")
-        .defaultValue(ListMode.Blacklist)
+        .defaultValue(ListMode.Whitelist)
         .build()
     );
 
@@ -179,12 +180,12 @@ public class VeinMiner extends Module {
         blocks.removeIf(MyBlock::shouldRemove);
 
         if (!blocks.isEmpty()) {
-            if (tick < delay.get() && !blocks.getFirst().mining) {
+            if (tick < delay.get() && !blocks.get(0).mining) {
                 tick++;
                 return;
             }
             tick = 0;
-            blocks.getFirst().mine();
+            blocks.get(0).mine();
         }
     }
 
@@ -216,7 +217,7 @@ public class VeinMiner extends Module {
         }
 
         public boolean shouldRemove() {
-            return mc.world.getBlockState(blockPos).getBlock() != originalBlock || Utils.distance(mc.player.getX() - 0.5, mc.player.getY() + mc.player.getEyeHeight(mc.player.getPose()), mc.player.getZ() - 0.5, blockPos.getX() + direction.getOffsetX(), blockPos.getY() + direction.getOffsetY(), blockPos.getZ() + direction.getOffsetZ()) > mc.player.getBlockInteractionRange();
+            return mc.world.getBlockState(blockPos).getBlock() != originalBlock || Utils.distance(mc.player.getX() - 0.5, mc.player.getY() + mc.player.getEyeHeight(mc.player.getPose()), mc.player.getZ() - 0.5, blockPos.getX() + direction.getOffsetX(), blockPos.getY() + direction.getOffsetY(), blockPos.getZ() + direction.getOffsetZ()) > mc.interactionManager.getReachDistance();
         }
 
         public void mine() {
@@ -259,7 +260,7 @@ public class VeinMiner extends Module {
         if (depth<=0) return;
         if (foundBlockPositions.contains(pos)) return;
         foundBlockPositions.add(pos);
-        if (Utils.distance(mc.player.getX() - 0.5, mc.player.getY() + mc.player.getEyeHeight(mc.player.getPose()), mc.player.getZ() - 0.5, pos.getX(), pos.getY(), pos.getZ()) > mc.player.getBlockInteractionRange()) return;
+        if (Utils.distance(mc.player.getX() - 0.5, mc.player.getY() + mc.player.getEyeHeight(mc.player.getPose()), mc.player.getZ() - 0.5, pos.getX(), pos.getY(), pos.getZ()) > mc.interactionManager.getReachDistance()) return;
         for(Vec3i neighbourOffset: blockNeighbours) {
             BlockPos neighbour = pos.add(neighbourOffset);
             if (mc.world.getBlockState(neighbour).getBlock().asItem() == item) {
